--- a/static/style.css
+++ b/static/style.css
@@ -39,12 +39,14 @@ nav{
 }
 
 nav a{
+	color: blue;
 	text-decoration: none;
-	font-size: 16px;
+	font-size: 20px;
 	line-height: 200%;
-	padding: 0 15px 0 15px;
+	padding: 0 30px 0 30px;
 	font-family: monospace;
 }
+
 
 /* Form */
 form{
@@ -53,7 +55,7 @@ form{
 }
 
 form button{
-	font-size: 16px;
+	font-size: 14px;
 }
 
 /* Subpages */
@@ -61,6 +63,7 @@ h2 {
     color: darkblue;
     font-size: 30px;
     font-family: Arial;
+    text-align: center;
 }
 
 /* Tables */
@@ -88,6 +91,17 @@ tr:hover {
 }
 
 .title{
-	width: 450px;
+	width: 25%;
+}
+
+.list-title{
+	font-weight: bold;
+	font-size: 1.2em;
+}
+
+div{
+	color: darkred;
+	text-align: center;
+	font-size: 1.5em;
 }
 
