--- a/templates/list.html
+++ b/templates/list.html
@@ -4,7 +4,9 @@
 <!-- Nav Bar -->
 <nav>
 	<a href="/">Back To Homepage</a>
+	<a>|</a>
 	<a href="/author">Search By Author</a>
+	<a>|</a>
 	<a href="/keyword">Search By Keyword</a>
 </nav>
 <hr>
@@ -20,7 +22,7 @@
 </tr>
 {% for item in my_list %}
 <tr>
-	<td>{{item[0]}}</td>
+	<td class='list-title'>{{item[0]}}</td>
 	<td>{{item[1]}}</td>
 </tr>
 {% endfor %}
