--- a/templates/author.html
+++ b/templates/author.html
@@ -28,6 +28,8 @@
 <br>
 
 <!-- Principle Tables -->
+
+<!-- No searching result -->
 {% if my_list == [] %}
 <table>
 <tr>
@@ -41,7 +43,7 @@
 <br>
 <div>Your search did not match any design principles.</div>
 
-
+<!-- Present searching result -->
 {% else %}
 <table>
 <tr>
