--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
     href="{{ url_for('static', filename='style.css') }}"/>
 
 	
-<h1>Welcome!</h1>
+<h1>Welcome to Design Principle FTW!</h1>
 <p>There are 99 design principles from various companies or authors in this database.</p>
 <p>You can search principles by author or by keywords.</p>
 <p>Also, you can take a look at the plotly figure indicating the numbers of authors writing these principles.</p>
@@ -10,8 +10,8 @@
 <hr>
 
 <ul>
-	<li><a href="/author">Search Principles By Author</a></li>	
-	<li><a href="/keyword">Search Principles By Keyword</a></li>
+	<li><a href="/author">Search By Author</a></li>	
+	<li><a href="/keyword">Search By Keyword</a></li>
 	<li><a href="/plotly">Plotly - The number of authors in Design Principles FTW</a></li>
 </ul>
 
