--- a/templates/author.html
+++ b/templates/author.html
@@ -56,7 +56,7 @@
 <tr>
 	<td>{{item[0]}}</td>
 	<td>{{item[3]}}</td>
-	<td><a href="{{item[1]}}">{{item[2]}}</a></td>
+	<td><a href="{{item[1]}}" target="_blank">{{item[2]}}</a></td>
 	<td>
 		<form action='/list/{{item[4]}}' method="POST">
 			<button type='submit'>Read More</button>
